Fix grammatical and spelling errors

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         
         <h2>Hello.</h2>
         <p>
-          I am an app web developer.<br />
+          I am an app and web developer.<br />
           I am passionate about UI and UX design<br />
-          and I love creating beatiful apps and websites.
+          and I love creating beautiful apps and websites.
         </p>
       </div>
       <hr />
@@ -53,8 +53,8 @@
           />
           <h3>App development</h3>
           <p>
-            I can make basic applications using Flutter and Android Studio. I
-            enjoy playing around with the different possible functoinalities app
+            I can make applications using Flutter and Android Studio. I
+            enjoy playing around with the different possible functionalities app
             development offers.
           </p>
         </div>
@@ -68,9 +68,8 @@
           <h3>Web design and development</h3>
           <p>
             Whenever I design websites and webpages I find myself getting stuck
-            on the design and the experience it offers instead of how it
-            functions. That is how I realised I would love to be a UI and UX
-            designer for web development.
+            on the design and the experience it offers. That is how I realised I 
+            would love to be a UI and UX designer for web development.
           </p>
         </div>
       </div>
